Passed the "isAccepted" flag as a prop to ExpandedNode and then passed the flag around as needed to ensure "Declined {time} by {doctor}" is visible. Also added the "black-medium" variable to styles and utilized it.

--- a/src/components/Node/Node.module.scss
+++ b/src/components/Node/Node.module.scss
@@ -29,7 +29,7 @@
   }
 
   &.declined {
-    background-color: #404040;
+    background-color: $black-medium;
   }
 
   .icon {
